# barbara-sh-b010-vancouver-puls

./: .env.example  .gitignore  .plan  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  rustfmt.toml
apps/api/: Cargo.toml
apps/api/migrations/: 20260719215000_database_baseline.sql  20260719224000_users_and_roles.sql  20260719231000_user_invites.sql  20260719233000_sources_and_ingested_items.sql  20260719235000_ingested_items_global_dedup_index.sql  20260720001500_post_drafts.sql  20260720010500_add_rejected_post_draft_status.sql  20260720012000_schedule_slots.sql  20260720013500_backup_content_library.sql  20260720015000_instagram_connections.sql  20260720020500_publish_logs.sql  20260720023000_instagram_insight_snapshots.sql
apps/api/src/: auth.rs  backup_library.rs  claude.rs  config.rs  cors.rs  db.rs  drafting.rs  drafts.rs  email.rs  error.rs  ingestion.rs  insights.rs  instagram.rs  invites.rs  lib.rs  main.rs  publisher_scheduler.rs  publishing.rs  rendering.rs  retry.rs  schedule.rs  sources.rs  storage.rs  users.rs
apps/api/tests/: core_flow_e2e.rs
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/auth/: AuthContext.tsx  authContextValue.ts  authStore.ts  types.ts  useAuth.ts
apps/web/src/layout/: AppLayout.tsx
apps/web/src/routes/: AppRoutes.tsx  BackupLibraryRoute.tsx  CalendarRoute.tsx  DashboardRoute.tsx  DraftsRoute.tsx  InboxRoute.tsx  LoginRoute.tsx  PerformanceRoute.tsx  PlaceholderRoute.tsx  SettingsRoute.tsx  SourcesRoute.tsx  UsersRoute.tsx
