[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
