[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cookie = "0.18"
jsonwebtoken = { version = "9.3", default-features = false }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
rust-s3 = { version = "0.36.0", default-features = false, features = ["tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[lints]
workspace = true
